# rigor-toolkit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: examples.yml
examples/: README.md  coinflip_smoke.py
examples/weather_forecast_skill/: PREREGISTRATION.md  README.md  RESULTS.md  fetch_data.py  requirements.txt  run_weather_demo.py
examples/weather_forecast_skill/data/: actual_Denver_2025-06-26_2026-07-05.json  actual_London_2025-06-26_2026-07-05.json  actual_Nairobi_2025-06-26_2026-07-05.json  actual_Sydney_2025-06-26_2026-07-05.json  actual_Tokyo_2025-06-26_2026-07-05.json  climo_Denver_2015-01-01_2024-12-31.json  climo_London_2015-01-01_2024-12-31.json  climo_Nairobi_2015-01-01_2024-12-31.json  climo_Sydney_2015-01-01_2024-12-31.json  climo_Tokyo_2015-01-01_2024-12-31.json  forecast_Denver_2025-07-06_2026-07-05.json  forecast_London_2025-07-06_2026-07-05.json  forecast_Nairobi_2025-07-06_2026-07-05.json  forecast_Sydney_2025-07-06_2026-07-05.json  forecast_Tokyo_2025-07-06_2026-07-05.json
examples/weather_forecast_skill/probes/: lead_availability_probe.py  previous_day8_null_London.json
rigor_toolkit/: __init__.py  baselines.py  bootstrap.py  core.py  episodes.py  evaluator.py  multi_test.py  narrator.py  power.py  prereg.py  verdict.py
