[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rigor-toolkit"
version = "0.1.0"
description = "Honest grading for timestamped predictions: episode dedup, resolution-at-horizon, explicit named baselines, binomial power math, and one computed verdict that every consumer reads and none re-derives."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "forecast-evaluation", "backtesting", "baselines", "model-validation",
    "time-series", "statistics", "forecast-skill",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.setuptools]
packages = ["rigor_toolkit"]
