[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "labrys"
version = "0.2.0"
description = "Honest, falsification-first grading for timestamped predictions: episode dedup, explicit named baselines, binomial power math, multiple-comparison (family-wise / FDR) correction, correlation-corrected effective sample size, and deterministic pre-registration commitments — one computed verdict every consumer reads and none re-derives."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "forecast-evaluation", "backtesting", "baselines", "model-validation",
    "time-series", "statistics", "forecast-skill",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.scripts]
rigor-prereg = "rigor_toolkit.prereg:main"

[tool.setuptools]
packages = ["rigor_toolkit"]
